deploy/k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-commerce
  namespace: micro-commerce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"      # photo SAS uploads
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"    # Keycloak headers
spec:
  ingressClassName: nginx
  rules:
    - host: web.micro-commerce.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: web, port: { number: 80 } } }
    - host: keycloak.micro-commerce.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: keycloak, port: { number: 80 } } }
    - host: azurite.micro-commerce.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: azurite, port: { number: 80 } } }
